I added my own logo to the navbar and adjusted to size

--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
 <body id="content">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <div class='text-white'>
+            <div>
+                <svg width="50px" height="40px" viewBox="5 5 50 52">
+                    <path d="M5 50 L 40 50 L 40 25 L 5 25 Z" stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M10 30 L 15 35 L 10 40" stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M15 40 L 25 40" stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M20 25 A 30 15 90 0 0 17.5 2.5 A 20 20 90 0 0 15 25" stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M25 25 A 30 20 90 0 1 25 5 " stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M 24 5 A 10 10 0 0 1 32.5 10 A 30 10 45 0 1 27.5 10" stroke="white" stroke-width="2" fill="transparent" />
+                    <path d="M 30 25 A 30 30 0 0 0 30 10" stroke="white" stroke-width="2" fill="transparent" />
+                </svg>
+            </div>
+            <div class='text-white mr-2'>
                 <h1>John Morgan</h1>
+            </div>
 
-            </div>
             <div class="float-left">
-                <a href="https://github.com/johnmorgan2000"><button class="py-1">Github</button></a>
-                <a href=""><button class='mx-2 py-1' disabled>Resume</button></a>
-                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button class="mt-1 py-1">LinkedIn</button></a>
+                <a href="https://github.com/johnmorgan2000"><button class="py-1 btn-sm">Github</button></a>
+                <a href=""><button class='mx-2 py-1 btn-sm' disabled>Resume</button></a>
+                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button class="mt-1 btn-sm py-1">LinkedIn</button></a>
             </div>
+
         </div>
     </nav>
     <div class="container">
