Change to top three buttons to a dropdown to each link

--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@
             <div class='text-white mr-2'>
                 <h1>John Morgan</h1>
             </div>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <b>Link To</b>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="https://github.com/johnmorgan2000">Github</a>
+                    <a class="dropdown-item" href="">Resume</a>
+                    <a class="dropdown-item" href="https://www.linkedin.com/in/john-morgan-6a142516b/">LinkIn</a>
+                </div>
+            </div>
 
-            <div class="float-left">
-                <a href="https://github.com/johnmorgan2000"><button class="py-1 btn-sm">Github</button></a>
+            <!-- <div class="float-left">
+                <a href=""><button class="py-1 btn-sm">Github</button></a>
                 <a href=""><button class='mx-2 py-1 btn-sm' disabled>Resume</button></a>
                 <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button class="mt-1 btn-sm py-1">LinkedIn</button></a>
-            </div>
+            </div> -->
 
         </div>
     </nav>
