Add the languages I have learned as a part of the page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
 </head>
 
 <body id="content">
@@ -39,31 +40,25 @@
                 </div>
             </div>
 
-            <!-- <div class="float-left">
-                <a href=""><button class="py-1 btn-sm">Github</button></a>
-                <a href=""><button class='mx-2 py-1 btn-sm' disabled>Resume</button></a>
-                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button class="mt-1 btn-sm py-1">LinkedIn</button></a>
-            </div> -->
-
         </div>
     </nav>
     <div class="container">
         <div class="row justify-content-between">
-            <div class="col-sm-12 col-lg-8 border rounded mt-2 p-0 bg-white">
-                <div id="bio" class="">
+            <div id="bio" class="col-sm-12 col-lg-8 rounded mt-2 p-0 bg-white">
+                <div class="">
                     <h1 class="block-header row justify-content-around">My Bio</h1>
                     <p class="m-0 p-2">
                         Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
                         in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that
                         we have all the necessary qualities and experience to get hired as developers. So far this year,
                         I have learned to write code in python, html, css, and javascript. By the time I finish this program,
-                        I expect to know many more languages ,as well as, how to be a more professional worker to in order
-                        to be the most competent programmer I can be.
+                        I expect to know many more languages ,as well as, how to be a more professional worker in order to
+                        be the most competent programmer I can be.
                     </p>
                 </div>
             </div>
 
-            <div id="contact" class="card col-sm-12 col-lg-3 p-0  mt-2">
+            <div id="contact" class="card col-sm-12 col-lg-3  p-0 mt-2">
                 <div class="row justify-content-around pt-2">
                     <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px">
                 </div>
@@ -72,160 +67,172 @@
                         Contact Me
                     </h1>
                     <ul class="list-group">
-                        <li class="list-group-item px-2">School Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
-                        <li class="list-group-item px-2">Personal Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
+                        <li class="list-group-item px-2 border-0">School Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
+                        <li class="list-group-item px-2 border-0">Personal Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div id="projects" class="">
-            <div class="row">
-                <div class="border rounded col-sm-12 col-lg-8 mt-2 bg-white">
-                    <div>
-                        <h1 class="block-header row justify-content-around">My Projects</h1>
-                    </div>
-                    <ul id="favorite">
-                        <h2 class="language">Favorites</h2>
-                        <li>
-                            <div>
-                                <a href="https://github.com/BaseCampCoding/bookstore"><h1>bookstore</h1></a>
-                                <p>A book store website where we finished the html in the templates</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
-                                <p>A rental store project made using python</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
-                                <p>A Gladiator game made in python using Classes</p>
-                            </div>
-                        </li>
+        <div class="row d-flex justify-content-between">
+            <div id="practice" class="bg-white rounded col-sm-12 col-lg-3 p-0 mt-3">
+                <h1 class="block-header row justify-content-around">Practiced<br />Languages</h1>
+                <ul class="">
+                    <li class="px-2 border-0">Python</li>
+                    <li class="px-2 border-0">HTML</li>
+                    <li class="px-2 border-0">CSS</li>
+                    <li class="px-2 border-0">Javascript</li>
+
+                </ul>
+            </div>
 
 
-                    </ul>
-                    <ul id="python">
-                        <h2 class="language" d>Python</h2>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
-                                <p>A rental store project made using python</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
-                                <p>A Gladiator game made in python using Dictionaries</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
-                                <p>A Gladiator game made in python using Classes</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
-                                <p>A school project to make a blackjack card game</p>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul id="html">
-                        <h2 class="language" d>HTML</h2>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
-                                <p>Practice making forms using bootstrap</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
-                                <p>Html and css practice making slack features</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                                <p>Html and css practice making a Pypi web component</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                                <p>Html and css practice making a Pypi web component</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
-                                <p>Html and css practice making a navigation bar from ruby gems</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
-                                <p>Html and css practice making a devto article</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
-                                <p>Html and css practice making a devto keylink</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
-                                <p>Practice making a Explain Like I'm 5 devto component</p>
-                            </div>
-                        </li>
 
-                    </ul>
-                    <ul id="javascript">
-                        <h2 class="language" d>Javascript</h2>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
-                                <p>Practice done in Get_programming with node.js chapter 5</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
-                                <p>Practice done in Get_programming with node.js chapter 4</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
-                                <p>Practice done in Get_programming with node.js chapter 3</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
-                                <p>Practice done in Get_programming with node.js chapter 2</p>
-                            </div>
-                        </li>
 
-                    </ul>
 
-                </div>
+            <div id="projects" class="rounded col-sm-12 col-lg-8 mt-3 bg-white">
                 <div>
-
+                    <h1 class="block-header row justify-content-around">My Projects</h1>
                 </div>
+                <ul id="favorite">
+                    <h2 class="language">Favorites</h2>
+                    <li>
+                        <div>
+                            <a href="https://github.com/BaseCampCoding/bookstore"><h1>bookstore</h1></a>
+                            <p>A book store website where we finished the html in the templates</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                            <p>A rental store project made using python</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
+                            <p>A Gladiator game made in python using Classes</p>
+                        </div>
+                    </li>
+
+
+                </ul>
+                <ul id="python">
+                    <h2 class="language">Python</h2>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                            <p>A rental store project made using python</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
+                            <p>A Gladiator game made in python using Dictionaries</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
+                            <p>A Gladiator game made in python using Classes</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
+                            <p>A school project to make a blackjack card game</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul id="html">
+                    <h2 class="language">HTML</h2>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
+                            <p>Practice making forms using bootstrap</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
+                            <p>Html and css practice making slack features</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                            <p>Html and css practice making a Pypi web component</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                            <p>Html and css practice making a Pypi web component</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
+                            <p>Html and css practice making a navigation bar from ruby gems</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
+                            <p>Html and css practice making a devto article</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
+                            <p>Html and css practice making a devto keylink</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
+                            <p>Practice making a Explain Like I'm 5 devto component</p>
+                        </div>
+                    </li>
+
+                </ul>
+                <ul id="javascript">
+                    <h2 class="language">Javascript</h2>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
+                            <p>Practice done in Get_programming with node.js chapter 5</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
+                            <p>Practice done in Get_programming with node.js chapter 4</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
+                            <p>Practice done in Get_programming with node.js chapter 3</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
+                            <p>Practice done in Get_programming with node.js chapter 2</p>
+                        </div>
+                    </li>
+
+                </ul>
+
             </div>
         </div>
     </div>
 
-
+    <!-- <script src="js/jquery.js "></script>
+    <script src="js/popper.js "></script>
+    <script src="js/bootstrap.js "></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
