Fixed grammar error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>John Morgan</title>
-    <link rel="shortcut icon" href="images/favicon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/jpeg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -49,7 +49,7 @@
                 <div class="">
                     <h1 class="block-header row justify-content-around">My Bio</h1>
                     <p class="m-0 p-2">
-                        Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
+                        Hello there, my name is John Morgan and welcome to my portfolio. After graduating with honors from Charleston High School
                         in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that
                         we have all the necessary qualities and experience to get hired as developers. So far this year,
                         I have learned to write code in python, html, css, and javascript. By the time I finish this program,
