Adjusting portfolio picture

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div id="contact" class="card col-sm-12 col-lg-3  p-0 mt-2">
                 <div class="row justify-content-around pt-2">
-                    <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px">
+                    <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px" height="130px">
                 </div>
                 <div class="card-body p-0">
                     <h1 class="block-header card-title pl-1 row justify-content-around">
