--- a/index.html
+++ b/index.html
@@ -1,219 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>John Morgan</title>
+        <link rel="shortcut icon" href="images/favicon.png" type="image/jpeg" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>John Morgan</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/jpeg">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
-</head>
-
-<body id="content">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <div>
-                <svg width="50px" height="40px" viewBox="5 3 50 52">
-                    <path d="M5 50 L 40 50 L 40 25 L 5 25 Z" stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M10 30 L 15 35 L 10 40" stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M15 40 L 25 40" stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M20 25 A 30 15 90 0 0 17.5 2.5 A 20 20 90 0 0 15 25" stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M25 25 A 30 20 90 0 1 25 5 " stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M 24 5 A 10 10 0 0 1 32.5 10 A 30 10 45 0 1 27.5 10" stroke="white" stroke-width="3" fill="transparent" />
-                    <path d="M 30 25 A 30 30 0 0 0 30 10" stroke="white" stroke-width="3" fill="transparent" />
-                </svg>
-            </div>
-            <div class='text-white mr-2'>
-                <h1>John Morgan</h1>
-            </div>
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <b>Link To</b>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="https://github.com/johnmorgan2000">Github</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1mlaMLZW4h1A-QovfJVKMN2boJPq5lMX6TAtn2dAfUbQ/edit?usp=sharing">Resume</a>
-                    <a class="dropdown-item" href="https://www.linkedin.com/in/john-morgan-6a142516b/">LinkIn</a>
-                </div>
-            </div>
-
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row justify-content-between">
-            <div id="bio" class="col-sm-12 col-lg-8 rounded mt-2 p-0 bg-white">
+    <body id="content">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
                 <div>
-                    <h1 class="block-header row justify-content-around">My Bio</h1>
-                    <p id="bio-paragraph" class="m-0 p-2">
-
-                    </p>
+                    <svg width="50px" height="40px" viewBox="5 3 50 52">
+                        <path
+                            d="M5 50 L 40 50 L 40 25 L 5 25 Z"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M10 30 L 15 35 L 10 40"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M15 40 L 25 40"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M20 25 A 30 15 90 0 0 17.5 2.5 A 20 20 90 0 0 15 25"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M25 25 A 30 20 90 0 1 25 5 "
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M 24 5 A 10 10 0 0 1 32.5 10 A 30 10 45 0 1 27.5 10"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                        <path
+                            d="M 30 25 A 30 30 0 0 0 30 10"
+                            stroke="white"
+                            stroke-width="3"
+                            fill="transparent"
+                        />
+                    </svg>
+                </div>
+                <div class="text-white mr-2"><h1>John Morgan</h1></div>
+                <div class="dropdown">
+                    <button
+                        class="btn dropdown-toggle"
+                        type="button"
+                        id="dropdownMenuButton"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                    >
+                        <b>Link To</b>
+                    </button>
+                    <div
+                        class="dropdown-menu dropdown-menu-right"
+                        aria-labelledby="dropdownMenuButton"
+                    >
+                        <a
+                            class="dropdown-item"
+                            href="https://github.com/johnmorgan2000"
+                            >Github</a
+                        >
+                        <a
+                            class="dropdown-item"
+                            href="https://docs.google.com/document/d/1mlaMLZW4h1A-QovfJVKMN2boJPq5lMX6TAtn2dAfUbQ/edit?usp=sharing"
+                            >Resume</a
+                        >
+                        <a
+                            class="dropdown-item"
+                            href="https://www.linkedin.com/in/john-morgan-6a142516b/"
+                            >LinkIn</a
+                        >
+                    </div>
                 </div>
             </div>
-
-            <div id="contact" class="card col-sm-12 col-lg-3  p-0 mt-2">
-                <div class="row justify-content-around pt-2">
-                    <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px" height="130px">
+        </nav>
+        <div class="container">
+            <div class="row justify-content-around">
+                <div
+                    id="bio"
+                    class="col-sm-12 col-lg-8 rounded justify-content-around mt-2 p-0 bg-white"
+                >
+                    <div>
+                        <h1
+                            class="block-header row justify-content-around primary-text-color"
+                        >
+                            My Bio
+                        </h1>
+                        <p id="bio-paragraph" class="m-0 p-2"></p>
+                    </div>
                 </div>
-                <div class="card-body p-0">
-                    <h1 class="block-header card-title pl-1 row justify-content-around">
-                        Contact Me
+
+                <div
+                    id="contact"
+                    class="card col-sm-12 col-lg-8  justify-content-around p-0 mt-2"
+                >
+                    <div
+                        class="row justify-content-around pt-2 primary-text-color"
+                    >
+                        <img
+                            id="photo"
+                            src="images/2018.jpg"
+                            alt=""
+                            width="150"
+                        />
+                    </div>
+                    <div class="card-body p-0">
+                        <h1
+                            class="block-header card-title pl-1 row justify-content-around primary-text-color"
+                        >
+                            Contact Me
+                        </h1>
+                        <ul class="list-group">
+                            <li class="list-group-item px-2 border-0">
+                                School Email:
+                                <a
+                                    href="mailto:jmorgan@basecampcodingacademy.org"
+                                    >jmorgan@basecampcodingacademy.org</a
+                                >
+                            </li>
+                            <li class="list-group-item px-2 border-0">
+                                Personal Email:
+                                <a href="mailto:morganjohnjr@icloud.com"
+                                    >morganjohnjr@icloud.com</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div
+                    id="practice"
+                    class="bg-white rounded col-sm-12 col-lg-8  justify-content-around p-0 mt-3"
+                >
+                    <h1
+                        class="block-header row justify-content-around primary-text-color"
+                    >
+                        Practiced<br />Languages
                     </h1>
-                    <ul class="list-group">
-                        <li class="list-group-item px-2 border-0">School Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
-                        <li class="list-group-item px-2 border-0">Personal Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
-                        </li>
+                    <ul class="">
+                        <li class="px-2 border-0">Python</li>
+                        <li class="px-2 border-0">HTML</li>
+                        <li class="px-2 border-0">CSS</li>
+                        <li class="px-2 border-0">Javascript</li>
+                    </ul>
+                </div>
+
+                <div
+                    id="projects"
+                    class="rounded col-sm-12 col-lg-8 justify-content-around mt-3 bg-white"
+                >
+                    <div>
+                        <h1
+                            class="block-header row justify-content-around primary-text-color"
+                        >
+                            My Projects
+                        </h1>
+                    </div>
+                    <ul id="favorite">
+                        <h2 class="language primary-text-color">Favorites</h2>
+                        <div class="row"></div>
+                    </ul>
+                    <ul id="python">
+                        <h2 class="language primary-text-color">Python</h2>
+                        <div class="row"></div>
+                    </ul>
+                    <ul id="html">
+                        <h2 class="language primary-text-color">HTML</h2>
+                        <div class="row"></div>
+                    </ul>
+                    <ul id="javascript">
+                        <h2 class="language primary-text-color">Javascript</h2>
+                        <div class="row"></div>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="row d-flex justify-content-between">
-            <div id="practice" class="bg-white rounded col-sm-12 col-lg-3 p-0 mt-3">
-                <h1 class="block-header row justify-content-around">Practiced<br />Languages</h1>
-                <ul class="">
-                    <li class="px-2 border-0">Python</li>
-                    <li class="px-2 border-0">HTML</li>
-                    <li class="px-2 border-0">CSS</li>
-                    <li class="px-2 border-0">Javascript</li>
+        <script id="projects-template" type="text/x-handlebars-template">
+            <div class="data-block col-5 m-1">
+                <div class="project-title">
+                    <h4 class="project-github">{{title}}</h4>
 
-                </ul>
-            </div>
-
-
-
-
-
-            <div id="projects" class="rounded col-sm-12 col-lg-8 mt-3 bg-white">
-                <div>
-                    <h1 class="block-header row justify-content-around">My Projects</h1>
                 </div>
-                <ul id="favorite">
-                    <h2 class="language">Favorites</h2>
-                    <div>
-
-                    </div>
-
-
-
-                </ul>
-                <ul id="python">
-                    <h2 class="language">Python</h2>
-                    <div>
-
-                    </div>
-                </ul>
-                <ul id="html">
-                    <h2 class="language">HTML</h2>
-                    <div>
-
-                    </div>
-                    <!-- <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
-                            <p>Practice making forms using bootstrap</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
-                            <p>Html and css practice making slack features</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                            <p>Html and css practice making a Pypi web component</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                            <p>Html and css practice making a Pypi web component</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
-                            <p>Html and css practice making a navigation bar from ruby gems</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
-                            <p>Html and css practice making a devto article</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
-                            <p>Html and css practice making a devto keylink</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
-                            <p>Practice making a Explain Like I'm 5 devto component</p>
-                        </div>
-                    </li> -->
-
-                </ul>
-                <ul id="javascript">
-                    <h2 class="language">Javascript</h2>
-                    <div></div>
-                    <!-- <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
-                            <p>Practice done in Get_programming with node.js chapter 5</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
-                            <p>Practice done in Get_programming with node.js chapter 4</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
-                            <p>Practice done in Get_programming with node.js chapter 3</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
-                            <p>Practice done in Get_programming with node.js chapter 2</p>
-                        </div>
-                    </li> -->
-
-                </ul>
-
+                <div class="description hidden">
+                    <p>{{description}}</p>
+                    <a href="{{github}}" >Go To Github</a>
+                </div>
             </div>
-        </div>
-    </div>
+        </script>
 
-    <script id="projects-template" type="text/x-handlebars-template">
-        <li>
-        <div>
-            <a href="{{github}}"><h1>{{title}}</h1></a>
-            <p>{{description}}</p>
-        </div>
-    </li>
-    </script>
+        <script src="handlebars/handlebars.js"></script>
+        <script src="DATA.js"></script>
+        <script src="javascript.js"></script>
 
-    <script src="handlebars/handlebars.js"></script>
-    <script src="DATA.js"></script>
-    <script src="javascript.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
-
+        <script src="bootstrap/js/jquery.js"></script>
+        <script src="bootstrap/js/popper.js"></script>
+        <script src="bootstrap/js/bootstrap.js"></script>
+    </body>
 </html>
