Addressed issues #1 , #2 , and #3.

--- a/index.html
+++ b/index.html
@@ -80,20 +80,23 @@
                             href="https://github.com/johnmorgan2000"
                             >Github</a
                         >
+
                         <a
                             class="dropdown-item"
                             href="https://docs.google.com/document/d/1mlaMLZW4h1A-QovfJVKMN2boJPq5lMX6TAtn2dAfUbQ/edit?usp=sharing"
                             >Resume</a
                         >
+
                         <a
                             class="dropdown-item"
                             href="https://www.linkedin.com/in/john-morgan-6a142516b/"
-                            >LinkIn</a
+                            >LinkedIn</a
                         >
                     </div>
                 </div>
             </div>
         </nav>
+
         <div class="container">
             <div class="row justify-content-around">
                 <div
@@ -157,7 +160,7 @@
                     >
                         Practiced<br />Languages/Frameworks
                     </h1>
-                    <ul class="">
+                    <ul>
                         <li class="px-2 border-0">Python</li>
                         <li class="px-2 border-0">HTML</li>
                         <li class="px-2 border-0">CSS</li>
@@ -176,18 +179,22 @@
                             My Projects
                         </h1>
                     </div>
+
                     <div id="favorite">
                         <h2 class="language primary-text-color">Favorites</h2>
                         <div class="row justify-content-around"></div>
                     </div>
+
                     <div id="python">
                         <h2 class="language primary-text-color">Python</h2>
                         <div class="row justify-content-around"></div>
                     </div>
+
                     <div id="html">
                         <h2 class="language primary-text-color">HTML</h2>
                         <div class="row justify-content-around"></div>
                     </div>
+
                     <div id="javascript">
                         <h2 class="language primary-text-color">Javascript</h2>
                         <div class="row justify-content-around"></div>
