Commented out the Html header for now.

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                         <div class="row justify-content-around"></div>
                     </div>
 
-                    <div id="html">
+                    <!-- <div id="html">
                         <h2 class="language primary-text-color">HTML</h2>
                         <div class="row justify-content-around"></div>
-                    </div>
+                    </div> -->
 
                     <div id="javascript">
                         <h2 class="language primary-text-color">Javascript</h2>
