Added more to languages and frameworks

--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                         Practiced<br />Languages/Frameworks
                     </h1>
                     <ul>
+                        <li class="px-2 border-0">Java</li>
+                        <li class="px-2 border-0">React.js</li>
+                        <li class="px-2 border-0">SASS</li>
                         <li class="px-2 border-0">Python</li>
                         <li class="px-2 border-0">HTML</li>
                         <li class="px-2 border-0">CSS</li>
