go to can go to the page or github

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="github-link">
                     <small>(Click inside of box for description)</small>
                     <br/>
-                    <a href="{{github}}" >Go To Github</a>
+                    <a href="{{github}}" >Go To ...</a>
                 </div>
             </div>
         </script>
